# Software-Architect-Raven

./: .gitignore  README.md  cli.py  main.py  orchestrator.py  pyproject.toml  requirements.txt
agents/: executor.py  investigator.py  llm_investigator.py  llm_planner.py  llm_validator.py  planner.py  validator.py
config/: settings.py
core/: exceptions.py  logging.py
examples/sample_repo/: Dockerfile  README.md  app.py  gateway.py  requirements.txt  sample_input.json
models/: observation.py  repository.py  target.py
output/: test-repo-run-result.json  test-repo-run-result.md  test-repo-verification-result.json  test-repo-verification-result.md  test-repo2-run-result.json  test-repo2-run-result.md
output/Test-repo/: architecture.md  investigation_log.json  repository_summary.json  runtime_report.md  summary.md
output/Test-repo2/: architecture.md  investigation_log.json  repository_summary.json  runtime_report.md  summary.md
reports/: report_generator.py
repository/: analyzer.py
runtime/: docker.py  gateway_runner.py  log_capture.py
state/: builder.py  state.py
storage/: observation_store.py
tests/: conftest.py  test_executor.py  test_guardrails.py  test_investigator.py  test_llm_investigator.py  test_llm_planner.py  test_llm_validator.py  test_observation_store.py  test_orchestrator.py  test_planner.py  test_report_generator.py  test_repository_analyzer.py  test_runtime_docker.py  test_state_builder.py  test_termination.py  test_tools.py  test_validator.py
tools/: filesystem.py  search.py
validation/: guardrails.py  termination.py
(+21 files in other folders)
