[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "raven"
version = "0.1.0"
description = "RAVEN — Repository Analysis, Validation & Execution Network"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
raven = "cli:main"

[tool.setuptools]
py-modules = ["cli", "main"]
packages = ["core", "config", "models", "state", "repository"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
